--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.0.6 <4.0.0'
 
 dependencies:
+  flex_color_scheme: ^7.2.0
   flutter:
     sdk: flutter
 
@@ -17,3 +18,12 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  fonts:
+    - family: yekan
+      fonts:
+        - asset: assets/fonts/IRANYekanMobileRegular.ttf
+        - asset: assets/fonts/IRANYekanMobileBold.ttf
+          weight: 700
+
+
