--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,9 +8,11 @@ environment:
 
 dependencies:
   dio: ^5.3.2
+  equatable: ^2.0.5
   flex_color_scheme: ^7.2.0
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
@@ -19,6 +21,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/img/
 
   fonts:
     - family: yekan
