--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,12 +7,14 @@ environment:
   sdk: '>=3.0.6 <4.0.0'
 
 dependencies:
+  cached_network_image: ^3.2.3
   dio: ^5.3.2
   equatable: ^2.0.5
   flex_color_scheme: ^7.2.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  smooth_page_indicator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
